--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h5>1. Type a message</h5>
             <textarea placeholder="Haan yahi par likhna hai" name="" id="textmsg" cols="30" rows="10"></textarea>
             <h5>2. Set a password</h5>
-            <input placeholder="Kuch bhi daaldo lekin yaad rakhna" type="password" name="" id="password">
+            <input placeholder="Kuch bhi daaldo" type="password" name="" id="password">
             <h5>3. Encrypt message</h5>
             <button id="encrypt-btn"><span><img src="./tala.png" alt=""></span>Encrypt Text</button>
         </div>
@@ -28,7 +28,7 @@
             <h5>1. Paste encrypted message</h5>
             <textarea placeholder="Haan yahi par likhna hai" name="" id="emojimsg" cols="30" rows="10"></textarea>
             <h5>2. Type a password</h5>
-            <input placeholder="Kuch bhi daaldo lekin yaad rakhna" type="password" name="" id="finalpassword">
+            <input placeholder="Kuch bhi daaldo " type="password" name="" id="finalpassword">
             <h5>3. Decrypt Emojis</h5>
             <button id="decrypt-btn"><span><img src="./khulatala.png" alt=""></span>Decrypt Text</button>
         </div>
